// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runPipeline action Dispatches events properly 1`] = `
Array [
  Object {
    "payload": Object {
      "experimentId": "experiment-id",
    },
    "type": "backendStatus/backendStatusLoading",
  },
  Object {
    "payload": Object {},
    "type": "experimentSettings/startPipeline",
  },
]
`;

exports[`runPipeline action Dispatches status error if loading fails 1`] = `
Array [
  Object {
    "payload": Object {
      "experimentId": "experiment-id",
    },
    "type": "backendStatus/backendStatusLoading",
  },
  Object {
    "payload": Object {
      "error": "We couldn't start working on your data.",
      "experimentId": "experiment-id",
    },
    "type": "backendStatus/backendStatusError",
  },
]
`;

exports[`runPipeline action Runs only the embedding if only changed filter was configureEmbedding 1`] = `
Array [
  Object {
    "payload": Object {},
    "type": "experimentSettings/discardChangedQCFilters",
  },
  Object {
    "payload": Object {
      "embeddingType": "umap",
    },
    "type": "embeddings/loading",
  },
]
`;
